feature vision test done

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,10 +25,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_height"
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_width="0dip"
+                    android:layout_weight="1"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -38,10 +39,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_weight"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
+                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -51,10 +53,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_pulseoximeter"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
+                    android:layout_weight="1.5"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -64,10 +67,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_bloodpressure"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
+                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -77,10 +81,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_tempreture"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
+                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -88,12 +93,28 @@
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
+
                 <TextView
-                    android:id="@+id/tv_header_bloodsugar"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_header_vision"
+                    android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
+                    android:background="@drawable/repeat"
+                    android:gravity="center"
+                    android:padding="@dimen/pad5"
+                    android:text="Vision"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+
+                <TextView
+                    android:id="@+id/tv_header_bloodsugar"
+                    android:layout_width="0dip"
+                    android:layout_weight="1"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad5"
                     android:background="@color/orange4"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -103,10 +124,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_hemoglobin"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
+                    android:layout_weight="1"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
