--- a/app/src/main/res/layout/activity_pulse_oximeter_main.xml
+++ b/app/src/main/res/layout/activity_pulse_oximeter_main.xml
@@ -19,7 +19,8 @@
 
         <TextView
             android:id="@+id/tv_header_height"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
@@ -32,7 +33,8 @@
 
         <TextView
             android:id="@+id/tv_header_weight"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
@@ -45,7 +47,8 @@
 
         <TextView
             android:id="@+id/tv_header_pulseoximeter"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
+            android:layout_weight="1.5"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
@@ -58,7 +61,8 @@
 
         <TextView
             android:id="@+id/tv_header_bloodpressure"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
@@ -71,7 +75,8 @@
 
         <TextView
             android:id="@+id/tv_header_tempreture"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
@@ -83,8 +88,24 @@
             android:textSize="22sp" />
 
         <TextView
+            android:id="@+id/tv_header_vision"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
+            android:background="@drawable/repeat"
+            android:gravity="center"
+            android:padding="@dimen/pad5"
+            android:text="Vision"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
+
+
+        <TextView
             android:id="@+id/tv_header_hemoglobin"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
@@ -97,7 +118,8 @@
 
         <TextView
             android:id="@+id/tv_header_bloodsugar"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
