--- a/app/src/main/res/layout/actofit_main_activity.xml
+++ b/app/src/main/res/layout/actofit_main_activity.xml
@@ -28,10 +28,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_height"
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_width="0dip"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -41,10 +42,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_weight"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@color/orange4"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -54,10 +56,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_pulseoximeter"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1.5"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -67,10 +70,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_bloodpressure"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -80,10 +84,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_tempreture"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -92,11 +97,26 @@
                     android:textSize="22sp" />
 
                 <TextView
-                    android:id="@+id/tv_header_bloodsugar"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_header_vision"
+                    android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
+                    android:background="@drawable/repeat"
+                    android:gravity="center"
+                    android:padding="@dimen/pad5"
+                    android:text="Vision"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+
+                <TextView
+                    android:id="@+id/tv_header_bloodsugar"
+                    android:layout_width="0dip"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -106,10 +126,11 @@
 
                 <TextView
                     android:id="@+id/tv_header_hemoglobin"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
+                    android:layout_weight="1"
                     android:background="@drawable/repeat"
                     android:gravity="center"
                     android:padding="@dimen/pad5"
@@ -133,7 +154,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
@@ -146,7 +167,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
@@ -159,7 +180,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
@@ -172,7 +193,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad10"
+                    android:layout_margin="@dimen/pad5"
                     android:layout_weight="1"
                     android:background="@drawable/rectangle"
                     android:gravity="center"
@@ -194,7 +215,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/pad10"
+                android:layout_marginStart="@dimen/pad5"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
@@ -509,8 +530,8 @@
                         android:layout_height="50dp"
                         android:layout_margin="10dp"
                         android:layout_weight=".6"
-                        android:baselineAligned="false"
                         android:background="@drawable/repeat"
+                        android:baselineAligned="false"
                         android:gravity="center"
                         android:text="Skip"
                         android:textColor="@color/white"
