--- a/app/src/main/res/layout/layout_blood_pressure.xml
+++ b/app/src/main/res/layout/layout_blood_pressure.xml
@@ -7,7 +7,6 @@
     android:background="@drawable/background"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,10 +20,11 @@
 
             <TextView
                 android:id="@+id/tv_header_weight"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_width="0dip"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -34,10 +34,11 @@
 
             <TextView
                 android:id="@+id/tv_header_height"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -47,10 +48,11 @@
 
             <TextView
                 android:id="@+id/tv_header_pulseoximeter"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1.5"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -60,10 +62,11 @@
 
             <TextView
                 android:id="@+id/tv_header_bloodpressure"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@color/orange4"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -73,10 +76,11 @@
 
             <TextView
                 android:id="@+id/tv_header_tempreture"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -85,11 +89,26 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/tv_header_hemoglobin"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_header_vision"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:padding="@dimen/pad5"
+                android:text="Vision"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_header_hemoglobin"
+                android:layout_width="0dip"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -99,10 +118,11 @@
 
             <TextView
                 android:id="@+id/tv_header_bloodsugar"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
