--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -5,7 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-
     <LinearLayout
         android:id="@+id/LLInfo"
         android:layout_width="match_parent"
@@ -22,10 +21,11 @@
 
             <TextView
                 android:id="@+id/tv_header_height"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_width="0dip"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -35,10 +35,11 @@
 
             <TextView
                 android:id="@+id/tv_header_weight"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -48,10 +49,11 @@
 
             <TextView
                 android:id="@+id/tv_header_pulseoximeter"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1.5"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -61,10 +63,11 @@
 
             <TextView
                 android:id="@+id/tv_header_bloodpressure"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -74,10 +77,11 @@
 
             <TextView
                 android:id="@+id/tv_header_tempreture"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -86,11 +90,26 @@
                 android:textSize="22sp" />
 
             <TextView
-                android:id="@+id/tv_header_bloodsugar"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_header_vision"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:padding="@dimen/pad5"
+                android:text="Vision"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_header_bloodsugar"
+                android:layout_width="0dip"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@drawable/repeat"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
@@ -100,17 +119,17 @@
 
             <TextView
                 android:id="@+id/tv_header_hemoglobin"
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/pad10"
+                android:layout_margin="@dimen/pad5"
+                android:layout_weight="1"
                 android:background="@color/orange4"
                 android:gravity="center"
                 android:padding="@dimen/pad5"
                 android:text="Hemoglobin"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
-
 
         </LinearLayout>
 
@@ -415,7 +434,6 @@
                     </LinearLayout>
 
                 </RelativeLayout>
-
 
             </RelativeLayout>
         </ScrollView>
