--- a/app/src/main/res/layout/activity_height_screen.xml
+++ b/app/src/main/res/layout/activity_height_screen.xml
@@ -16,10 +16,11 @@
 
         <TextView
             android:id="@+id/tv_header_height"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@color/orange4"
             android:gravity="center"
             android:padding="@dimen/pad5"
@@ -29,10 +30,11 @@
 
         <TextView
             android:id="@+id/tv_header_weight"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
             android:padding="@dimen/pad5"
@@ -40,13 +42,13 @@
             android:textColor="@color/white"
             android:textSize="22sp" />
 
-
         <TextView
             android:id="@+id/tv_header_pulseoximeter"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1.5"
             android:background="@drawable/repeat"
             android:gravity="center"
             android:padding="@dimen/pad5"
@@ -56,10 +58,11 @@
 
         <TextView
             android:id="@+id/tv_header_bloodpressure"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
             android:padding="@dimen/pad5"
@@ -69,10 +72,11 @@
 
         <TextView
             android:id="@+id/tv_header_tempreture"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
             android:padding="@dimen/pad5"
@@ -80,13 +84,28 @@
             android:textColor="@color/white"
             android:textSize="22sp" />
 
+        <TextView
+            android:id="@+id/tv_header_vision"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
+            android:background="@drawable/repeat"
+            android:gravity="center"
+            android:padding="@dimen/pad5"
+            android:text="Vision"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
+
 
         <TextView
             android:id="@+id/tv_header_bloodsugar"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
             android:padding="@dimen/pad5"
@@ -96,10 +115,11 @@
 
         <TextView
             android:id="@+id/tv_header_hemoglobin"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
             android:padding="@dimen/pad5"
@@ -122,7 +142,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
@@ -134,7 +154,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
@@ -146,7 +166,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
@@ -158,7 +178,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
             android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:gravity="center"
@@ -252,10 +272,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="@dimen/pad10">
+            android:padding="@dimen/pad5">
 
             <EditText
                 android:id="@+id/et_temprature"
