--- a/app/src/main/res/layout/activity_vision.xml
+++ b/app/src/main/res/layout/activity_vision.xml
@@ -9,114 +9,234 @@
     android:weightSum="3"
     tools:context=".activity.VisionActivity">
 
+    <!--    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_header_weight"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:text="Height"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_header_height"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:text="Weight"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_header_pulseoximeter"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:text="SpO2"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_header_bloodpressure"
+                android:layout_width="140dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:text="BP Monitor"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_header_tempreture"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:text="Temperature"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_header_vision"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad10"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:padding="@dimen/pad10"
+                android:text="Vision"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_header_bloodsugar"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:text="Sugar"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_header_hemoglobin"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad5"
+                android:background="@drawable/repeat"
+                android:gravity="center"
+                android:text="Hemoglobin"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+        </LinearLayout>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="0.1"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_header_weight"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
+            android:id="@+id/tv_header_height"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:text="Height"
+            android:padding="@dimen/pad5"
+            android:text="Height Scale"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/tv_header_height"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:id="@+id/tv_header_weight"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:text="Weight"
+            android:padding="@dimen/pad5"
+            android:text="Weight Scale"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/tv_header_pulseoximeter"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1.5"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:text="SpO2"
+            android:padding="@dimen/pad5"
+            android:text="Pulse Oximeter"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/tv_header_bloodpressure"
-            android:layout_width="140dp"
-            android:layout_height="40dp"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
+            android:padding="@dimen/pad5"
             android:text="BP Monitor"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
         <TextView
             android:id="@+id/tv_header_tempreture"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
+            android:padding="@dimen/pad5"
             android:text="Temperature"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/tv_header_bloodsugar"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:id="@+id/tv_header_vision"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad10"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
+            android:background="@color/orange4"
+            android:gravity="center"
+            android:padding="@dimen/pad5"
+            android:text="Vision"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
+
+
+        <TextView
+            android:id="@+id/tv_header_bloodsugar"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/pad5"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:padding="@dimen/pad10"
-            android:text="Vision"
+            android:padding="@dimen/pad5"
+            android:text="Blood Sugar"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_header_hemoglobin"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="0dip"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/pad5"
+            android:layout_margin="@dimen/pad10"
+            android:layout_weight="1"
             android:background="@drawable/repeat"
             android:gravity="center"
-            android:text="Sugar"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/pad5"
-            android:background="@drawable/repeat"
-            android:gravity="center"
+            android:padding="@dimen/pad5"
             android:text="Hemoglobin"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22sp" />
 
     </LinearLayout>
 
-
-    <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -129,7 +249,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="2.5"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 
     <LinearLayout
@@ -142,7 +262,6 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="2">
-
 
         <LinearLayout
             android:layout_width="0dp"
@@ -157,7 +276,8 @@
                 android:layout_margin="15dp"
                 android:background="@drawable/repeat"
                 android:text="Finish"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -174,7 +294,8 @@
                 android:layout_margin="15dp"
                 android:background="@drawable/repeat"
                 android:text="Skip"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
         </LinearLayout>
 
